# task-limiter

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh
MagiskModule/: config_ori.toml  customize.sh  module.prop  service.sh  task_limiter
src/: blocker.rs  config.rs  info_sync.rs  lib.rs  lru_info.rs  main.rs
src/config/: mod.rs  parse.rs
src/core/: android_utils.rs  info.rs  mod.rs  pid_utils.rs
src/misc/: android_utils.rs  inotify_utils.rs  mod.rs
src/nap_group/: group.rs  killer.rs  mod.rs  processes_group.rs
