[package]
name = "task_limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
cpulimiter = { path = "./CpuLimit/cpulimiter" }
toml = "0.7.4"
rayon = "1.7.0"
procfs = "0.15.1"
inotify = "0.10.0"