[package]
name = "task_limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = 'abort'
strip = true

[dependencies]
cpulimiter = { git = "https://github.com/shadow3aaa/CpuLimit.git" }
toml = "0.7.4"
rayon = "1.7.0"
inotify = "0.10.0"
tokio = { version = "1.28.1", features = ["full"] }