[package]
name = "task_limiter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = 'abort'
strip = true

[dependencies]
toml = "0.7.4"
rayon = "1.7.0"
inotify = "0.10.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "time", "macros", "parking_lot"] }
libc = "0.2.144"
parking_lot = "0.12.1"
log = "0.4.18"
env_logger = "0.10.0"
chrono = "0.4.26"